# ProjektSortowanie

./: CMakeLists.txt  README.md
include/algorithms/: bubblesort.h  heapsort.h  insertsort.h  introsort.h  mergesort.h  quicksort.h  shellsort.h
src/: custom_tests.cpp  main.cpp  test_sorting_algorithms.cpp
